<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:background="@drawable/ic_background_atas"
                />

            <RelativeLayout
                android:id="@+id/relativeAtas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tvImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/tvImage"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/welcome"
                    android:textColor="#92FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvWelcome"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/tvImage"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_notifications_none_24"
                    android:layout_toStartOf="@id/tvUsername"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeAtas"
                android:layout_marginTop="40dp"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="25dp"
                        android:layout_marginStart="25dp"
                        >

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_background_center" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="25dp"
                            android:layout_alignParentBottom="true"
                            android:src="@drawable/image" />
                    </RelativeLayout>

                </FrameLayout>


                <TextView
                    android:id="@+id/tvStart"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_start"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="26dp"
                    />

                <RelativeLayout
                    android:layout_below="@id/tvStart"
                    android:layout_width="77dp"
                    android:layout_height="27dp"
                    android:background="@drawable/bg_getstart"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="21dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="12sp"
                        android:text="@string/get_start"
                        android:textColor="@color/white"
                        android:layout_centerInParent="true"
                        />
                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="24dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                android:text="@string/most_popular"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                android:text="@string/see_all"
                android:textSize="14sp"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="243dp"
            android:layout_marginTop="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="24dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/categories"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/see_all"
                android:gravity="end"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/blue"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="@drawable/bg_item_categories"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Backend"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_item_categories"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Fronend"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_item_categories"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Javascript"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_weight="1"
                android:background="@drawable/bg_item_categories"
                android:layout_marginStart="10dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/poppins_regular"
                    android:text="Flutter"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </RelativeLayout>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="243dp"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>



</ScrollView>